--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,7 +7,7 @@
 <body>
 <div>
   <div class='center'>
-    <div class='title'>Classify Car Damages</div>
+    <div class='title'>Classify Car Damages 🚗</div>
     <p>
       Use images of <strong>Bumper Dents</strong>, <strong>Bumper Scratch</strong>,<strong>Door Dent</strong>,<strong>Door Scratch</strong>, 
       <strong>Glass Shatter</strong>,<strong>Head Lamp</strong>, <strong>tail Lamp</strong> or any other Car image!
